opacity visible when loaded data, fix links styles and a i18n conditional

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -7,6 +7,7 @@ body {
 
 body {
   padding-top: 15%;
+  transition: all .3s linear;
 }
 
 h1,
@@ -25,7 +26,9 @@ a {
   text-decoration: none;
   border-bottom: 1px solid #333;
   padding-bottom: 2px;
-  &:hover {
+  &:hover,
+  &:active,
+  &:focus {
     color: rgb(255, 153, 0);
     border-color: rgb(255, 153, 0);
     text-decoration: none;
@@ -168,7 +171,10 @@ textarea {
     text-transform: lowercase;
     border-color: #999;
     border: 0;
-    &:hover {
+    &:hover,
+    &:active,
+    &:focus {
+      text-decoration: none;
       color: #333;
     }
   }
